overflow fix for chrome

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html,body {
 
     font-family: Helvetica, Arial, sans-serif;
     color:#84754d;
-
+    background-color: #234648;
     display: flex;
     flex-direction: column;
 }
@@ -45,6 +45,7 @@ html,body {
     display: flex;
     flex-wrap: nowrap;
     background-color: #234648;
+    overflow: scroll;
 }
 .column {
     width: 50%;
